@@ -73,6 +73,9 @@ BiocCheckGitClone <- function(package=".", ...){
     handleCheck("Checking DESCRIPTION...")
     checkDescription(package_dir)
 
+    handleCheck("Checking CITATION...")
+    checkForCitationFile(package_dir)
+    
     ## Summary
     .msg("\n\nSummary:")
     .msg("ERROR count: %d", .error$getNum())
