@@ -479,18 +479,6 @@ checkBBScompatibility <- function(pkgdir, source_tarball)
     }
 }
 
-checkForCitationFile <- function(package_dir) {
-    # is this the only location to check?
-    citfile_location <- file.path(package_dir, "inst", "CITATION")
-    if(file.exists(citfile_location)) {
-        handleCheck("Checking that provided CITATION file is correctly formatted...")
-        cit <- tryCatch(
-            readCitationFile(citfile_location),
-            error = function(e) 
-                handleNote("CITATION file might be not correctly formatted"))
-    }
-}
-
 checkDescriptionNamespaceConsistency <- function(pkgname)
 {
     dImports <- cleanupDependency(packageDescription(pkgname)$Imports)
@@ -1675,5 +1663,16 @@ checkDescription <- function(package_dir){
     } else {
         if (any((c("Author","Maintainer") %in% colnames(dcf))))
             handleError("Do not use Author/Maintainer fields. Use Authors@R.")
+    }
+}
+
+checkForCitationFile <- function(package_dir) {
+    citfile_location <- file.path(package_dir, "inst", "CITATION")
+    if(file.exists(citfile_location)) {
+        handleCheck("Checking that provided CITATION file is correctly formatted...")
+        cit <- tryCatch(
+            readCitationFile(citfile_location),
+            error = function(e) 
+                handleNote("CITATION file might be not correctly formatted"))
     }
 }
