@@ -287,14 +287,6 @@ Can be disabled with `--no-check-bbs`
     * That person must have either `family` or `given` name defined.
     * (optional) A syntactically valid ORCID ID, results in note if not.
 
-## CITATION checks
-
-**Checking that CITATION file is correctly formatted**
-
-`BiocCheck` tries to read the provided `CITATION` file (i.e. not the one 
-automatically generated by each package) with `readCitationFile()` - this is  
-expected to be in the `INST` folder (`NOTE`).
-
 ##  NAMESPACE checks
 
 Can be disabled with `--no-check-namespace`
@@ -736,6 +728,17 @@ file is therefore checked in its raw original form.
    contributors. This checks that Authors@R is utilized and that there are no
    instances of Author or Maintainer in the DESCRIPTION (`ERROR`)
 
+## CITATION checks
+
+**Checking that CITATION file is correctly formatted**
+
+`BiocCheck` tries to read the provided `CITATION` file (i.e. not the one 
+automatically generated by each package) with `readCitationFile()` - this is  
+expected to be in the `INST` folder (`NOTE`). `readCitationFile()` needs to work
+properly without the package being installed. Most common causes of failure
+occur when trying to use helper functions like packageVersion() or packageDate()
+instead of using meta$Version or meta$Date. See [R documentation](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#CITATION-files) for more
+information.
 
 
 # Expanding `BiocCheck`
